--- a/serverConfig.json
+++ b/serverConfig.json
@@ -1,8 +1,9 @@
 {
 	"baseUrl": "http://dummy.restapiexample.com/api/v1",
-	"authentication": "client_credentials",
-	"client_id": "markd315",
-	"client_secret": "testsecret",
+	"authType": "client_credentials",
+	"authorizationServer": "https://demo.identityserver.io/connect/token",
+	"client_id": "m2m",
+	"client_secret": "secret",
 	"user": "basic_user",
 	"pass": "basic_pass"
 }
