--- a/serverConfig.json
+++ b/serverConfig.json
@@ -5,5 +5,7 @@
 	"client_id": "m2m",
 	"client_secret": "secret",
 	"user": "basic_user",
-	"pass": "basic_pass"
+	"pass": "basic_pass",
+	"corsProxy": "https://cors-anywhere.herokuapp.com/",
+	"mockResponses": false
 }
