Fix posting of children and re-enable mock responses

--- a/serverConfig.json
+++ b/serverConfig.json
@@ -7,5 +7,5 @@
 	"user": "basic_user",
 	"pass": "basic_pass",
 	"corsProxy": "https://cors-anywhere.herokuapp.com/",
-	"mockResponses": false
+	"mockResponses": true
 }
