--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Build complex REST json bodies automatically utilizing Blockly, Menuly and json-schema",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,8 @@
     "browserify": "^17.0.0",
     "express": "^4.17.1",
     "serve-index": "^1.9.1",
-    "uniq": "^1.0.1"
+    "uniq": "^1.0.1",
+    "aws-sdk": "^2.1400.0",
+    "dotenv": "^16.0.3"
   }
 }
