--- a/cloudformation-template.yaml
+++ b/cloudformation-template.yaml
@@ -18,6 +18,10 @@ Parameters:
     Type: String
     Default: vpc-fc7ecc86
     Description: VPC ID
+  OpenAIApiKey:
+    Type: String
+    NoEcho: true
+    Description: OpenAI API Key for LLM schema generation
 
 Resources:
   # DynamoDB Table for user management
@@ -113,11 +117,15 @@ Resources:
           import bcrypt
           import os
           from datetime import datetime, timedelta
+          import urllib3
+          import urllib.request
+          import urllib.parse
           
           print("insert the rest of the code manually for now lol")
       Environment:
         Variables:
           BUCKET_NAME: !Ref UniversalFrontendBucket
+          OPENAI_API_KEY: !Ref OpenAIApiKey
       Timeout: 30
 
   # EC2 Instance
@@ -281,8 +289,7 @@ Resources:
       RestApiId: !Ref ApiGateway
       ResourceId: !Ref ApiGatewayResourceJson
       HttpMethod: POST
-      AuthorizationType: CUSTOM
-      AuthorizerId: !Ref ApiGatewayAuthorizer
+      AuthorizationType: NONE
       Integration:
         Type: AWS
         IntegrationHttpMethod: POST
@@ -295,8 +302,40 @@ Resources:
             }
         IntegrationResponses:
           - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
       MethodResponses:
         - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+
+  ApiMethodJsonOptions:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref ApiGateway
+      ResourceId: !Ref ApiGatewayResourceJson
+      HttpMethod: OPTIONS
+      AuthorizationType: NONE
+      Integration:
+        Type: MOCK
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Methods: "'POST, OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type, Authorization, X-Amz-Date, X-Api-Key, X-Amz-Security-Token'"
+              method.response.header.Access-Control-Max-Age: "'86400'"
+            ResponseTemplates:
+              application/json: '{"message": "CORS preflight"}'
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Methods: true
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Max-Age: true
 
   ApiMethodAuth:
     Type: AWS::ApiGateway::Method
@@ -423,6 +462,7 @@ Resources:
     DependsOn:
       - ApiMethodDel
       - ApiMethodJson
+      - ApiMethodJsonOptions
       - ApiMethodAuth
       - ApiMethodLlm
       - ApiMethodRegister
@@ -431,6 +471,7 @@ Resources:
     Properties:
       RestApiId: !Ref ApiGateway
       StageName: !Ref Environment
+      Description: !Sub 'Deployment ${AWS::StackName} - ${AWS::Region} - v2'
 
   # Lambda Permission for API Gateway
   LambdaPermission:
