--- a/serverConfig.json
+++ b/serverConfig.json
@@ -1,11 +1,10 @@
 {
 	"baseUrl": "http://dummy.restapiexample.com/api/v1",
-	"authType": "client_credentials",
+	"authType": "none",
 	"authorizationServer": "https://demo.identityserver.io/connect/token",
 	"client_id": "m2m",
 	"client_secret": "secret",
 	"user": "basic_user",
 	"pass": "basic_pass",
-	"corsProxy": "https://cors-anywhere.herokuapp.com/",
-	"mockResponses": true
+	"mockResponses": false
 }
