--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/markd315/JSON-blockbuilder-frontend#readme",
   "dependencies": {
     "ajv": "^8.5.0",
+    "ajv-formats": "^2.1.1",
     "aws-sdk": "^2.1400.0",
     "browserify": "^17.0.0",
     "dotenv": "^16.0.3",
